--- a/catalog.html
+++ b/catalog.html
@@ -3,19 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона (поиск жилья)</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
     <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
-          <img src="img/logo-sedona.png" width="138" height="70" alt="Логотип турагентства «Седона»">
+        <a class="main-header__logo logo" href="index.html">
+          <img class="logo__img" src="img/logo-sedona.png" width="138" height="70" alt="Логотип турагентства «Седона»">
         </a>
         <ul class="site-navigation">
-          <li><a href="#">Информация</a></li>
-          <li><a href="#">Фото и видео</a></li>
-          <li><a href="#">Карта штата</a></li>
+          <li><a class="site-navigation__link" href="#">Информация</a></li>
+          <li><a class="site-navigation__link" href="#">Фото и видео</a></li>
+          <li><a class="site-navigation__link" href="#">Карта штата</a></li>
           <li>
-            <a class="site-navigation-current" href="hotels.html">Гостиницы</a>
+            <a class="site-navigation__link site-navigation__link_current" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -25,89 +28,111 @@
         <h1 class="visually-hidden">Поиск жилья в Седоне</h1>
 
         <section class="search-hotels">
-          <form class="search-hotels-form" action="#" method="get">
+          <form class="search-hotels__form" action="#" method="get">
             <fieldset>
               <legend><h2 class="visually-hidden">Форма поиска</h2></legend>
               <fieldset>
-                <legend>Инфраструктура:</legend>
+                <legend class="search-hotels__form-title">
+                  Инфраструктура:
+                </legend>
                 <p>
-                  <label for="pool">Бассейн</label>
                   <input type="checkbox" name="pool" id="pool" checked>
+                  <label class="search-hotels__form-text" for="pool">
+                    Бассейн
+                  </label>
                 </p>
 
                 <p>
-                  <label for="parking">Парковка</label>
                   <input type="checkbox" name="parking" id="parking">
+                  <label class="search-hotels__form-text" for="parking">
+                    Парковка
+                  </label>
                 </p>
 
                 <p>
-                  <label for="wi-fi">Wi-fi</label>
                   <input type="checkbox" name="wi-fi" id="wi-fi">
+                  <label class="search-hotels__form-text" for="wi-fi">
+                    Wi-fi
+                  </label>
                 </p>
               </fieldset>
               <fieldset>
-                <legend>Тип жилья:</legend>
+                <legend class="search-hotels__form-title">Тип жилья:</legend>
                 <p>
-                  <label for="hotel">Гостиница</label>
                   <input type="checkbox" name="hotel" id="hotel" checked>
+                  <label class="search-hotels__form-text" for="hotel">
+                    Гостиница
+                  </label>
                 </p>
 
                 <p>
-                  <label for="motel">Мотель</label>
                   <input type="checkbox" name="motel" id="motel" checked>
+                  <label class="search-hotels__form-text" for="motel">
+                    Мотель
+                  </label>
                 </p>
 
                 <p>
-                  <label for="apartments">Апартаменты</label>
                   <input type="checkbox" name="apartments" id="apartments" checked>
+                  <label class="search-hotels__form-text" for="apartments">
+                    Апартаменты
+                  </label>
                 </p>
               </fieldset>
               <fieldset>
-                <legend>Стоимость в сутки (р):</legend>
+                <legend class="search-hotels__form-title">
+                  Стоимость в сутки (р):
+                </legend>
                 <p>
-                  <label for="from">От</label>
-                  <input type="text" value="0" id="from">
+                  <label class="search-hotels__form-text" for="from">От</label>
+                  <input class="search-hotels__form-field" type="text" value="0" id="from">
                 </p>
 
                 <p>
-                  <label for="prior">До</label>
-                  <input type="text" value="3000" id="prior">
+                  <label class="search-hotels__form-text" for="prior">
+                    До
+                  </label>
+                  <input class="search-hotels__form-field" type="text" value="3000" id="prior">
                 </p>
                 <div class="column-controls-button">
                   <button class="button-control-min-price" type="button" name="button-control-min-price">
                       <span class="visually-hidden">Переключатель минимальной цены</span>
                   </button>
 
-                  <button button="button-control-max-price" type="button" name="button-control-max-price">
+                  <button class="button-control-max-price" type="button" name="button-control-max-price">
                     <span class="visually-hidden">Переключатель максимальной цены</span>
                   </button>
                 </div>
               </fieldset>
-              <button class="button search-hotels-form-button" type="submit">Показать</button>
+              <button class="search-hotels-form-button button" type="submit">Показать</button>
             </fieldset>
           </form>
         </section>
         <section class="found-hotels">
           <h2 class="visually-hidden">Результаты поиска</h2>
-          <p>Найдено: 3</p>
-          <form class="sorting" action="#" method="get">
+          <p class="found-hotels__results-text">Найдено: 3</p>
+          <form class="found-hotels__sorting" action="#" method="get">
             <fieldset>
-                <legend>Сортировка:</legend>
-                <fieldset class="sorting-type">
+                <legend class="found-hotels__title">Сортировка:</legend>
+                <fieldset class="found-hotels__sorting-type">
                   <legend class="visually-hidden">По типам</legend>
                   <p>
-                      <label for="sorting-price">По цене</label>
-                      <input type="radio" name="sorting-type" value="price" id="sorting-price" checked>
+                    <input class="found-hotels__field" type="radio" name="sorting-type" value="price" id="sorting-price" checked>
+                    <label class="found-hotels__text" for="sorting-price">
+                      По цене
+                    </label>
                   </p>
 
                   <p>
-                      <label for="sorting-type">По типу</label>
-                      <input type="radio" name="sorting-type" value="type" id="sorting-type">
+                      <input class="found-hotels__field" type="radio" name="sorting-type" value="type" id="sorting-type">
+                      <label class="found-hotels__text"  for="sorting-type">
+                        По типу
+                      </label>
                   </p>
 
                   <p>
-                      <label for="sorting-rating">По рейтингу</label>
-                      <input type="radio" name="sorting-type" value="rating" id="sorting-rating">
+                      <input class="found-hotels__field" type="radio" name="sorting-type" value="rating" id="sorting-rating">
+                      <label class="found-hotels__text" for="sorting-rating">По рейтингу</label>
                   </p>
                 </fieldset>
 
@@ -116,76 +141,91 @@
                     По увеличению и уменьшению
                   </legend>
                   <p>
+                    <input type="radio" name="sorting-descending-increase" value="increase" id="sorting-increase">
                     <label class="visually-hidden" for="sorting-increase">
                       По увеличению
                     </label>
-                    <input type="radio" name="sorting-descending-increase" value="increase" id="sorting-increase">
                   </p>
-
                   <p>
+                    <input type="radio" name="sorting-descending-increase"
+                    value="descending" id="sorting-descending" checked>
                     <label class="visually-hidden" for="sorting-descending">
                       По уменьшению
                     </label>
-                    <input type="radio" name="sorting-descending-increase"
-                    value="descending" id="sorting-descending" checked>
                   </p>
                 </fieldset>
             </fieldset>
           </form>
 
           <ul class="found-hotels-list">
-            <li class="found-hotels-item">
+            <li class="found-hotels-list__item">
               <p class="image-hotel">
                 <img src="img/amara-resor-spa.jpg" width="135" height="90" alt="Amara Resort & Spa">
               </p>
               <div class="column-info-reserve">
-                <a class="name-hotel" href="#">Amara Resort & Spa</a>
-                <div class="desc">
-                  <p>Гостиница</p>
-                  <p>От 4000 р.</p>
+                <a class="found-hotels-list__hotel-link" href="#">
+                  Amara Resort & Spa
+                </a>
+                <div class="found-hotels-list__desc">
+                  <p class="found-hotels-list__text">Гостиница</p>
+                  <p class="found-hotels-list__text">От 4000 р.</p>
                 </div>
                 <p class="column-reserve">
-                  <a class="button details-button" href="#">Подробнее</a>
-                  <a class="button reserve-button" href="#">Забронировать</a>
+                  <a class="button found-hotels-list__details-button" href="#">
+                    Подробнее
+                  </a>
+                  <a class="button found-hotels-list__reserve-button" href="#">
+                    Забронировать
+                  </a>
                 </p>
               </div>
-              <p class="rating">Рейтинг: 8,5</p>
+              <p class="found-hotels-list__rating">Рейтинг: 8,5</p>
             </li>
-
-            <li class="found-hotels-item">
+            <li class="found-hotels-list__item">
               <p class="image-hotel">
                 <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Desert Quail Inn">
               </p>
               <div class="column-info-reserve">
-                <a class="name-hotel" href="#">Desert Quail Inn</a>
+                <a class="found-hotels-list__hotel-link" href="#">
+                  Desert Quail Inn
+                </a>
                 <div class="desc">
-                  <p>Гостиница</p>
-                  <p>От 4000 р.</p>
+                  <p class="found-hotels-list__text">Гостиница</p>
+                  <p class="found-hotels-list__text">От 4000 р.</p>
                 </div>
                 <p class="column-reserve">
-                  <a class="button details-button" href="#">Подробнее</a>
-                  <a class="button reserve-button" href="#">Забронировать</a>
+                  <a class="button found-hotels-list__details-button" href="#">
+                    Подробнее
+                  </a>
+                  <a class="button found-hotels-list__reserve-button" href="#">
+                    Забронировать
+                  </a>
                 </p>
               </div>
-              <p class="rating">Рейтинг: 8,9</p>
+              <p class="found-hotels-list__rating">Рейтинг: 8,9</p>
             </li>
-
-            <li class="found-hotels-item">
+            <li class="found-hotels-list__item">
               <p class="image-hotel">
                 <img src="img/villas-at-poco-diablo.jpg" width="135" height="90" alt="Villas at Poco Diablo">
               </p>
               <div class="column-info-reserve">
-                <a class="name-hotel" href="#">Villas at Poco Diablo</a>
+                <a class="found-hotels-list__hotel-link" href="#">
+                  Villas at Poco Diablo
+                </a>
                 <div class="desc">
-                  <p>Апартаменты</p>
-                  <p>От 2000 р.</p>
+                  <p class="found-hotels-list__text">Апартаменты</p>
+                  <p class="found-hotels-list__text">От 2000 р.</p>
                 </div>
                 <p class="column-reserve">
-                  <a class="button details-button" href="#">Подробнее</a>
-                  <a class="button reserve-button" href="#">Забронировать</a>
+                  <a class="button found-hotels-list__details-button" href="#">
+                    Подробнее
+                  </a>
+                  <a class="button found-hotels-list__reserve-button" href="#">
+                    Забронировать
+                  </a>
                 </p>
               </div>
-              <p class="rating">Рейтинг: 9,2</p>
+              <p class="found-hotels-list__rating">Рейтинг: 9,2</p>
             </li>
           </ul>
         </section>
