--- a/index.html
+++ b/index.html
@@ -3,96 +3,113 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
        <nav class="main-navigation">
-         <a class="main-header-logo" >
-           <img src="img/logo-sedona.png" width="138" height="70" alt="Логотип турагентства «Седона»">
+         <a class="main-header__logo logo" >
+           <img class="logo__img" src="img/logo-sedona.png" width="138" height="70" alt="Логотип турагентства «Седона»">
          </a>
          <ul class="site-navigation">
-           <li><a href="#">Информация</a></li>
-           <li><a href="#">Фото и видео</a></li>
-           <li><a href="#">Карта штата</a></li>
-           <li><a href="catalog.html">Гостиницы</a></li>
+           <li><a class="site-navigation__link" href="#">Информация</a></li>
+           <li><a class="site-navigation__link" href="#">Фото и видео</a></li>
+           <li><a class="site-navigation__link" href="#">Карта штата</a></li>
+           <li>
+             <a class="site-navigation__link" href="catalog.html">Гостиницы</a>
+           </li>
          </ul>
        </nav>
      </header>
 
     <main class="container">
       <h1 class="visually-hidden">Турагентство «Седона»</h1>
-      <p class="container-image">
+      <p class="container__image">
         <img src="img/image-slogan.png" width="458" height="352" alt="Welcome to the gorgeous Sedona. Sedona «Because the grand canyon sucks!»">
       </p>
       <section class="features">
         <h2 class="visually-hidden">Наши преимущества</h2>
         <div class="column">
-          <p class="slogan">Седона — небольшой городок в аризоне, Заслуживающий большего!</p>
-          <p class="subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+          <p class="features__slogan">Седона — небольшой городок в аризоне, Заслуживающий большего!</p>
+          <p class="features__subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </div>
         <ul class="features-list">
-          <li class="features-item">
+          <li class="features-list__item features-list__item_background-color_blue">
             <div class="column">
-                <h3>Настоящий Городок</h3>
-                <span>№1</span>
-                <p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
-              </div>
+              <h3 class="features-list__title features-list__text-color_white">
+                Настоящий Городок
+              </h3>
+              <span class="features-list__number features-list__text-color_white">
+                №1
+              </span>
+              <p class="features-list__text features-list__text-color_white">
+                Седона — не аттракцион для туристов, там течет своя жизнь
+              </p>
+            </div>
             <div class="column">
-                <img src="img/city.jpg" width="800" height="256" alt="Город Седона">
-              </div>
+              <img src="img/city.jpg" width="800" height="256" alt="Город Седона">
+            </div>
           </li>
 
-          <li class="features-item features-more-item">
-            <h3>Жилье</h3>
-            <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          <li class="features-list__item features-more-item">
+            <h3 class="features-list__title">Жилье</h3>
+            <p class="features-list__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
 
-          <li class="features-item features-more-item">
-            <h3>Еда</h3>
-            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          <li class="features-list__item features-more-item">
+            <h3 class="features-list__title">Еда</h3>
+            <p class="features-list__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
 
-          <li class="features-item features-more-item">
-            <h3>Сувениры</h3>
-            <p>Не только китайского, но и местного производства!</p>
+          <li class="features-list__item features-more-item">
+            <h3 class="features-list__title">Сувениры</h3>
+            <p class="features-list__text">Не только китайского, но и местного производства!</p>
           </li>
 
-          <li class="features-item">
+          <li class="features-list__item features-list__item_background-color_blue">
             <div class="column">
-              <h3>Там есть мост дьявола</h3>
-              <span>№2</span>
-              <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+              <h3 class="features-list__title features-list__text-color_white">
+                Там есть мост дьявола
+              </h3>
+              <span class="features-list__number features-list__text-color_white">
+                №2
+              </span>
+              <p class="features-list__text features-list__text-color_white">
+                Да, по нему можно пройти! Если конечно вы осмелитесь
+              </p>
             </div>
             <div class="column image">
               <img src="img/canyon.jpg" width="800" height="256" alt="Мост дьявола">
             </div>
           </li>
 
-          <li class="features-item">
-            <h3>Небольшая Площадь</h3>
-            <span>№3</span>
-            <p>Все достопримечательности находятся очень близко</p>
+          <li class="features-list__item features-list__item_background-color_gray">
+            <h3 class="features-list__title">Небольшая Площадь</h3>
+            <span class="features-list__number">№3</span>
+            <p class="features-list__text">Все достопримечательности находятся очень близко</p>
           </li>
 
-          <li class="features-item">
-            <h3>Красивая Дорога</h3>
-            <span>№4</span>
-            <p>Ехать в Седону из Лас-вегаса совсем не скучно!</p>
+          <li class="features-list__item features-list__item_background-color_gray">
+            <h3 class="features-list__title">Красивая Дорога</h3>
+            <span class="features-list__number">№4</span>
+            <p class="features-list__text">Ехать в Седону из Лас-вегаса совсем не скучно!</p>
           </li>
 
-          <li class="features-item">
-            <h3>Мало туристов</h3>
-            <span>№5</span>
-            <p>Большинство едет в гранд каньон и толпится там</p>
+          <li class="features-list__item features-list__item_background-color_gray">
+            <h3 class="features-list__title">Мало туристов</h3>
+            <span class="features-list__number">№5</span>
+            <p class="features-list__text">Большинство едет в гранд каньон и толпится там</p>
           </li>
         </ul>
       </section>
 
       <section class="reservation">
         <h2 class="visually-hidden">Бронирование гостиницы</h2>
-        <p class="lead">Заинтересовались?</p>
-        <p class="excerpt">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button search-button" href="hotels.html">Поиск гостиницы в седоне</a>
+        <p class="reservation__lead">Заинтересовались?</p>
+        <p class="reservation__excerpt">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button reservation__button-search" href="hotels.html">Поиск гостиницы в седоне</a>
         <form class="active modal modal-form" action="#" method="post">
           <fieldset class="visually-hidden">
             <legend class="visually-hidden">
@@ -101,20 +118,25 @@
 
             <fieldset>
               <legend class="visually-hidden">Время прибывания</legend>
-              <div>
-                <label for="arrival-data">Дата заезда:</label>
+              <div class="modal-form__time-stay" >
+                <label class="modal-form__text" for="arrival-data">
+                  Дата заезда:
+                </label>
                 <div class="column-input-icon">
-                  <input type="text" name="arrival-data" placeholder="24 Апреля 2017" id="arrival-data">
-                  <button class="button modal-form__button" type="button"><img src="img/calendar.svg" width="21" height="20" alt="Календарь"></button>
+                  <input class="modal-form__field" type="text" name="arrival-data" placeholder="24 Апреля 2017" id="arrival-data">
+                  <a class="modal-form__calendar-button" href="#" >
+                    <img src="img/calendar.svg" width="21" height="20" alt="Календарь">
+                  </a>
                 </div>
               </div>
 
               <div>
-                <label for="departure-date">Дата выезда:</label>
+                <label class="modal-form__text" for="departure-date">Дата выезда:</label>
                 <div class="column-input-icon">
-                  <input type="text" name="departure-date" placeholder="4 июля 2017" id="departure-date">
-                  <button class="button modal-form__button" type="button">
-                  <img src="img/calendar.svg" width="21" height="20" alt="Календарь"></button>
+                  <input class="modal-form__field" type="text" name="departure-date" placeholder="4 июля 2017" id="departure-date">
+                  <a href="#" class="modal-form__calendar-button" href="#" >
+                    <img src="img/calendar.svg" width="21" height="20" alt="Календарь">
+                  </a>
                 </div>
               </div>
             </fieldset>
@@ -122,24 +144,26 @@
             <fieldset>
             <legend class="visually-hidden">Колличество гостей</legend>
               <div>
-                <label for="adult">Взрослые:</label>
+                <label class="modal-form__text" for="adult">Взрослые:</label>
                 <div>
-                  <button class="button increase-button" type="button" name="increase-button"></button>
-                  <input type="text" name="adult" placeholder="2" id="adult">
-                  <button class="button reduce-button"  type="button" name="reduce-button"></button>
+                  <button class="button modal-form__increase-button" type="button" name="increase-button"></button>
+                  <input class="modal-form__field" type="text" name="adult" placeholder="2" id="adult">
+                  <button class="button modal-form__reduce-button"  type="button" name="reduce-button"></button>
                 </div>
               </div>
 
               <div>
-                <label for="children">Дети:</label>
+                <label class="modal-form__text" for="children">Дети:</label>
                 <div>
-                  <button class="button increase-button" type="button" name="increase-button"></button>
-                  <input type="text" name="adult" placeholder="0" id="children">
-                  <button class="button reduce-button" type="button" name="reduce-button"></button>
+                  <button class="button modal-form__increase-button" type="button" name="increase-button"></button>
+                  <input class="modal-form__field" type="text" name="adult" placeholder="0" id="children">
+                  <button class="button modal-form__reduce-button" type="button" name="reduce-button"></button>
                 </div>
               </div>
             </fieldset>
-            <button class="button form-button" type="submit">Найти</button>
+            <button class="button modal-form__submit-button" type="submit">
+              Найти
+            </button>
           </fieldset>
         </form>
       </section>
@@ -151,10 +175,10 @@
     </section>
     <footer class="main-footer">
       <div class="column">
-        <p class="footer-hashtag">#visitsedona</p>
+        <p class="main-footer__footer-hashtag">#visitsedona</p>
       </div>
       <div class="column">
-        <ul class="footer-social">
+        <ul class="main-footer__footer-social-list">
           <li>
             <a class="button social-button social-twitter" href="#">
               <span class="visually-hidden">Twitter</span>
@@ -173,10 +197,10 @@
         </ul>
       </div>
       <div class="column">
-        <p class="footer-copyright">
-          <span>Website by</span>
-          <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+        <p class="main-footer__copyright">
+          <span class="main-footer__copyright-text" >Website by</span>
+          <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img class="main-footer__copyright-logo" src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
           </a>
         </p>
       </div>
