--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
 
-      <main class="container">
+      <main class="container container_text_alignment">
         <h1 class="visually-hidden">Поиск жилья в Седоне</h1>
 
         <section class="search-hotels">
@@ -233,10 +233,10 @@
 
       <footer class="main-footer">
         <div class="column">
-          <p class="footer-hashtag">#visitsedona</p>
+          <p class="main-footer__footer-hashtag">#visitsedona</p>
         </div>
         <div class="column">
-          <ul class="footer-social">
+          <ul class="main-footer__footer-social-list">
             <li>
               <a class="button social-button social-twitter" href="#">
                 <span class="visually-hidden">Twitter</span>
@@ -255,10 +255,10 @@
           </ul>
         </div>
         <div class="column">
-          <p class="footer-copyright">
-            <span>Website by</span>
-            <a href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+          <p class="main-footer__copyright">
+            <span class="main-footer__copyright-text" >Website by</span>
+            <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">
+              <img class="main-footer__copyright-logo" src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
             </a>
           </p>
         </div>
