Внес замечания от наставника, по базовой стилизации.
1) Для .container__image в качестве фонового цвета большое подойдет светло-голубой (можно взять пипеткой с фона с горами), так больше будет соотв. тону фонового изображения. (критерий Д10)

ок . заменил фон на главной и стр. каталога.
===================================

2) У текстовых инпутов состояние фокуса не соотв. стайлгайду

ок. заменил стандартный outline на соотв. стайлгайду при фокусе.
===================================

3) У кнопки Забронировать на странице с отелями тоже состояние фокуса не соотв.
стайлгайду

ок. заменил
===================================

4) Чтобы фоновое изображение растягивалось на весь контейнер и не теряло пропорций - можно использовать свойство background-size: cover; (например, в блоке с фильтрами в отелях)

Дописал, для картинок гор на главной сранице и каталога.
===================================

Теперь насчет БЭМа:
1) https://yadi.sk/i/EyNke0003TQZkR - вот такие классы сразу выкидывай и забудь про них навсегда ) Очень длинные и подробные. Достаточно было бы features-list__item_blue - понятно что сниний фон, и внутренние спаны уже не будут нуждаться в доп.классах, вложенность до 2-х селекторов на интенсиве в css разрешена, они могут быть белыми, как потомки элемента features-list__item_blue. На крайний случай можно features-list__text_white
2) https://yadi.sk/i/dGqnwHuY3TQa92 - аналогично п.1
3) https://yadi.sk/i/XRPqGDXI3TQaY5 - явно лишнеее слово footer
4) https://yadi.sk/i/QYP_NhJZ3TQahQ - двойных модификаторов не бывает, только с одним _

ок. заменил
===================================

--- a/catalog.html
+++ b/catalog.html
@@ -18,13 +18,13 @@
           <li><a class="site-navigation__link" href="#">Фото и видео</a></li>
           <li><a class="site-navigation__link" href="#">Карта штата</a></li>
           <li>
-            <a class="site-navigation__link site-navigation__link_current" href="hotels.html">Гостиницы</a>
+            <a class="site-navigation__link site-navigation__link_current" href="#">Гостиницы</a>
           </li>
         </ul>
       </nav>
     </header>
 
-      <main class="container container_text_alignment">
+      <main class="container container_text-alignment">
         <h1 class="visually-hidden">Поиск жилья в Седоне</h1>
 
         <section class="search-hotels">
@@ -233,10 +233,10 @@
 
       <footer class="main-footer">
         <div class="column">
-          <p class="main-footer__footer-hashtag">#visitsedona</p>
+          <p class="main-footer__hashtag">#visitsedona</p>
         </div>
         <div class="column">
-          <ul class="main-footer__footer-social-list">
+          <ul class="main-footer__social-list">
             <li>
               <a class="button social-button social-twitter" href="#">
                 <span class="visually-hidden">Twitter</span>
