--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
           <p class="features__subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </div>
         <ul class="features-list">
-          <li class="features-list__item features-list__item_background-color_blue">
+          <li class="features-list__item features-list__item_blue">
             <div class="column">
-              <h3 class="features-list__title features-list__text-color_white">
+              <h3 class="features-list__title features-list__text_white">
                 Настоящий Городок
               </h3>
-              <span class="features-list__number features-list__text-color_white">
+              <span class="features-list__number features-list__text_white">
                 №1
               </span>
-              <p class="features-list__text features-list__text-color_white">
+              <p class="features-list__text features-list__text_white">
                 Седона — не аттракцион для туристов, там течет своя жизнь
               </p>
             </div>
@@ -68,15 +68,15 @@
             <p class="features-list__text">Не только китайского, но и местного производства!</p>
           </li>
 
-          <li class="features-list__item features-list__item_background-color_blue">
+          <li class="features-list__item features-list__item_blue">
             <div class="column">
-              <h3 class="features-list__title features-list__text-color_white">
+              <h3 class="features-list__title features-list__text_white">
                 Там есть мост дьявола
               </h3>
-              <span class="features-list__number features-list__text-color_white">
+              <span class="features-list__number features-list__text_white">
                 №2
               </span>
-              <p class="features-list__text features-list__text-color_white">
+              <p class="features-list__text features-list__text_white">
                 Да, по нему можно пройти! Если конечно вы осмелитесь
               </p>
             </div>
@@ -85,19 +85,19 @@
             </div>
           </li>
 
-          <li class="features-list__item features-list__item_background-color_gray">
+          <li class="features-list__item features-list__item_gray">
             <h3 class="features-list__title">Небольшая Площадь</h3>
             <span class="features-list__number">№3</span>
             <p class="features-list__text">Все достопримечательности находятся очень близко</p>
           </li>
 
-          <li class="features-list__item features-list__item_background-color_gray">
+          <li class="features-list__item features-list__item_gray">
             <h3 class="features-list__title">Красивая Дорога</h3>
             <span class="features-list__number">№4</span>
             <p class="features-list__text">Ехать в Седону из Лас-вегаса совсем не скучно!</p>
           </li>
 
-          <li class="features-list__item features-list__item_background-color_gray">
+          <li class="features-list__item features-list__item_gray">
             <h3 class="features-list__title">Мало туристов</h3>
             <span class="features-list__number">№5</span>
             <p class="features-list__text">Большинство едет в гранд каньон и толпится там</p>
@@ -175,10 +175,10 @@
     </section>
     <footer class="main-footer">
       <div class="column">
-        <p class="main-footer__footer-hashtag">#visitsedona</p>
+        <p class="main-footer__hashtag">#visitsedona</p>
       </div>
       <div class="column">
-        <ul class="main-footer__footer-social-list">
+        <ul class="main-footer__social-list">
           <li>
             <a class="button social-button social-twitter" href="#">
               <span class="visually-hidden">Twitter</span>
