Написал шапку (сетки)
Приступаю к сетки списка преимуществ

--- a/catalog.html
+++ b/catalog.html
@@ -9,15 +9,21 @@
   </head>
     <body>
     <header class="main-header">
-      <nav class="main-navigation">
+      <nav class="main-navigation inner">
         <a class="main-header__logo logo" href="index.html">
           <img class="logo__img" src="img/logo-sedona.png" width="138" height="70" alt="Логотип турагентства «Седона»">
         </a>
         <ul class="site-navigation">
-          <li><a class="site-navigation__link" href="#">Информация</a></li>
-          <li><a class="site-navigation__link" href="#">Фото и видео</a></li>
-          <li><a class="site-navigation__link" href="#">Карта штата</a></li>
-          <li>
+          <li class="site-navigation__item">
+            <a class="site-navigation__link" href="#">Информация</a>
+          </li>
+          <li class="site-navigation__item">
+            <a class="site-navigation__link" href="#">Фото и видео</a>
+          </li>
+          <li class="site-navigation__item site-navigation__item_align_text">
+            <a class="site-navigation__link" href="#">Карта штата</a>
+          </li>
+          <li class="site-navigation__item site-navigation__item_align_text">
             <a class="site-navigation__link site-navigation__link_current" href="#">Гостиницы</a>
           </li>
         </ul>
